fix align row to middle (#52)

--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -138,6 +138,7 @@
   }
   .name{
     margin-bottom: 2px;
+    margin-top: 10px;
   }
   .value{
     font-weight: bold;
